kubernetes/apps/default/maintainerr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  namespace: default
  annotations:
    gatus.home-operations.com/endpoint: 'dns: { query-name: maintainerr.unscfleet.com }'
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - maintainerr.unscfleet.com
  rules:
    - backendRefs:
        - name: maintainerr
          port: 6246
